# locust-prometheusdb-listener

./: .bumpversion.cfg  .flake8  .gitignore  LICENSE  README.md  pre-commit  pyproject.toml
.github/workflows/: publish-to-pypi.yml  quality-checks.yml
src/locust_prometheusdb_listener/: main.py
tests/unit/: test_dummy.py
