[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "locust-prometheusdb-listener"
version = "0.0.1" # Managed by bump2version
description = "Locust.io prometheusdb listener"
requires-python = ">=3.10"


dependencies = [

]
readme = {file = "README.MD", content-type = "text/markdown"}

[project.optional-dependencies]
dev = [
	# Testing stuff	
	"assertpy==1.1",
    "pytest==6.2.5",
    "pytest-cov==4.0.0",
	"pytest-mock==3.10.0",
	"requests-mock==1.11.0",

	# Linting and formatting
    "black==22.10.0",
    "build==0.10.0",
    "bump2version==1.0.1",
    "flake8==4.0.1",
    "flake8-import-order==0.18.1",
    "isort==5.10.1",
    "mypy==1.1.1",
	"pep8-naming==0.12.1",
    "ruff==0.2.2",
    "types-python-dateutil==2.8.0",
	"typing_extensions==4.9.0"
]

[project.urls]
"homepage" = "https://github.com/jmfiola/locust-prometheusdb-listener"
"repository" = "https://github.com/jmfiola/locust-prometheusdb-listener"

[tool.setuptools.packages.find]
where = ["src"]


[tool.isort]
profile = "black"
known_tests = [
	"conftest",
	"helpers"
]
sections=[
	"FUTURE","STDLIB","THIRDPARTY","FIRSTPARTY","LOCALFOLDER"
]
multi_line_output = 3
atomic = "True"
honor_noqa = "True"
include_trailing_comma = "True"
force_grid_wrap = "0"
use_parentheses = "True"
ensure_newline_before_comments = "True"
line_length = "88"
treat_all_comments_as_code = "True"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rap --junitxml=reports/junit_test_results.xml --cov=src --cov-report=html --cov-report=xml --cov-report=term"
testpaths = [
    "tests/unit",
]
junit_suite_name = "locust-prometheusdb-listener"
log_level = "INFO"
xfail_strict = "True"
log_cli = "True"
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(module)s:%(filename)s:%(lineno)s %(message)s"
log_file = "tests.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] %(module)s:%(filename)s:%(lineno)s %(message)s"
log_file_date_format = "%m-%d-%Y %H:%M:%S"

[tool.ruff]

exclude = ["data-files", "docs", ".git", "__pycache__", "venv"]
src = ["src/*", "tests/unit/*"]
show-fixes = true
line-length = 88

[tool.ruff.lint]
extend-select = ["C9", "E", "F", "N", "W"]
ignore = [ "N801", "N803", "N806", "N815", "N818"]
# Allow only underscore as unused variable
dummy-variable-rgx = "^_$"

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.format]

[tool.ruff.lint.isort]
# order-by-type = false
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]


